[package]
name = "slack-messaging"
version = "0.3.2"
authors = ["kaicoh <sumireminami@gmail.com>"]
edition = "2021"
keywords = ["slack", "messaging", "webhook"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaicoh/slack-messaging"
documentation = "https://docs.rs/slack-messaging"
description = "Support building messages for Slack Messaging API"

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4", optional = true }
once_cell = { version = "1.19", optional = true }
regex = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
fmt = ["dep:chrono", "dep:once_cell", "dep:regex"]
