[package]
name = "slack-messaging"
version = "0.6.0"
authors = ["kaicoh <sumireminami@gmail.com>"]
edition = "2024"
keywords = ["slack", "messaging", "webhook"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaicoh/slack-messaging"
documentation = "https://docs.rs/slack-messaging"
description = "Support building Slack Block Kit message"

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4", optional = true }
once_cell = { version = "1.20", optional = true }
regex = { version = "1.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
fmt = ["dep:chrono", "dep:once_cell", "dep:regex"]
