[package]
name = "slack-messaging-derive"
version = "0.7.0"
edition = "2024"
authors = ["kaicoh <sumireminami@gmail.com>"]
keywords = ["slack", "messaging", "webhook"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/kaicoh/slack-messaging"
documentation = "https://docs.rs/slack-messaging"
description = "Macros 1.1 implementation of #[derive(Builder)] for slack-messaging crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = "2"
darling = "0.23"
once_cell = { workspace = true }
